# Server/swagger.yaml
@@ -53,6 +53,12 @@ paths:
                     type: integer
                   totalPages:
                     type: integer
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     post:
       tags:
         - Courses
@@ -71,6 +77,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Course'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/courses/{id}:
     get:
       tags:
@@ -91,6 +103,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Course'
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     put:
       tags:
         - Courses
@@ -116,6 +140,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Course'
+        '401':
+          description: Not authorized instructor to update this course
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     delete:
       tags:
         - Courses
@@ -131,6 +173,24 @@ paths:
       responses:
         '204':
           description: Course deleted
+        '401':
+          description: Not authorized instructor to delete this course
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/courses/{id}/enroll:
     post:
       tags:
@@ -144,29 +204,37 @@ paths:
           description: ID of the course to enroll in
           schema:
             type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                studentId:
-                  type: integer
       responses:
         '201':
           description: Student enrolled
           content:
             application/json:
+              schemas:
+                $ref: '#/components/schemas/Enrollment'
+        '400':
+          description: Student already enrolled in this course
+          content:
+            application/json:
               schema:
-                type: object
-                properties:
-                  studentId:
-                    type: integer
-                  courseId:
-                    type: integer
-                  enrolledAt:
-                    type: string
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Not authorized student to enroll in this course
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/courses/{id}/reviews:
     post:
       tags:
@@ -189,6 +257,8 @@ paths:
               properties:
                 rating:
                   type: integer
+                  minimum: 1
+                  maximum: 5
                 comment:
                   type: string
       responses:
@@ -197,16 +267,31 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  rating:
-                    type: integer
-                  comment:
-                    type: string
-                  createdAt:
-                    type: string
+                $ref: '#/components/schemas/Course'
+        '400':
+          description: Student already reviewed this course or Not enrolled in this course
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Not authorized student to review this course
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/users/register:
     post:
       tags:
@@ -225,7 +310,24 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                type: object
+                properties:
+                  token:
+                    type: object
+                    properties:
+                      accessToken:
+                        type: string
+                      refreshToken:
+                        type: string
+                  id:
+                    type: string
+                  name:
+                    type: string
+                  email:
+                    type: string
+                    format: email
+                  role:
+                    type: string
         '500':
           description: Internal server error
           content:
@@ -258,43 +360,20 @@ paths:
                 type: object
                 properties:
                   token:
+                    type: object
+                    properties:
+                      accessToken:
+                        type: string
+                      refreshToken:
+                        type: string
+                  id:
                     type: string
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /api/users/facebook-login:
-    post:
-      tags:
-        - Users
-      summary: Login a user with Facebook
-      description: Login a user with Facebook
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                accessToken:
-                  type: string
-      responses:
-        '200':
-          description: User logged in
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  token:
+                  name:
+                    type: string
+                  email:
+                    type: string
+                    format: email
+                  role:
                     type: string
         '401':
           description: Unauthorized
@@ -309,23 +388,37 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   /api/users/google-login:
-    post:
+    get:
       tags:
         - Users
       summary: Login a user with Google
       description: Login a user with Google
       responses:
         '200':
-          description: User logged in
+          description: User logged in by Google
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   token:
+                    type: object
+                    properties:
+                      accessToken:
+                        type: string
+                      refreshToken:
+                        type: string
+                  id:
                     type: string
-        '401':
-          description: Unauthorized
+                  name:
+                    type: string
+                  email:
+                    type: string
+                    format: email
+                  role:
+                    type: string
+        '400':
+          description: Google authentication failed
           content:
             application/json:
               schema:
@@ -360,6 +453,20 @@ paths:
                 type: object
                 properties:
                   token:
+                    type: object
+                    properties:
+                      accessToken:
+                        type: string
+                      refreshToken:
+                        type: string
+                  id:
+                    type: string
+                  name:
+                    type: string
+                  email:
+                    type: string
+                    format: email
+                  role:
                     type: string
         '401':
           description: User not Found
@@ -408,12 +515,55 @@ paths:
                       type: array
                       items:
                         $ref: '#/components/schemas/Course'
+          '404':
+            description: Not found (courses or enrollments or enrolled courses) for this user
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Error'
           '500':
             description: Internal server error
             content:
               application/json:
                 schema:
                   $ref: '#/components/schemas/Error'
+  /api/users/facebook-login:
+    get:
+      tags:
+        - Users
+      summary: Login a user with Facebook
+      description: Login a user with Facebook
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                accessToken:
+                  type: string
+      responses:
+        '200':
+          description: User logged in
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Course:
@@ -427,6 +577,7 @@ components:
           required: true
         instructor:
           type: string
+          required: true
         students:
           type: array
           items:
@@ -448,7 +599,10 @@ components:
                 type: string
               url:
                 type: string
-                format: uri
+              fileType:
+                type: string
+              fileSize:
+                type: string
         createdAt:
           type: string
           format: date-time
@@ -458,6 +612,7 @@ components:
       required:
         - title
         - description
+        - instructor
         - category
         - difficulty
     Enrollment:
@@ -465,8 +620,10 @@ components:
       properties:
         studentId:
           type: string
+          required: true
         courseId:
           type: string
+          required: true
         enrolledAt:
           type: string
           format: date-time
@@ -504,6 +661,8 @@ components:
         - name
         - email
         - password
+      uniqueItems:
+        - email
     Error:
       type: object
       properties:
